--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,15 @@
     "string": "disable",
     "table": "disable",
     "utf8": "disable"
-  },
+},
   "Lua.workspace.library": [
     "~\\.vscode\\extensions\\ketho.wow-api-0.22.1\\Annotations\\Core"
-  ]
+],
+"Lua.diagnostics.globals": [
+    "ChatFrame1",
+    "ProfessionsFrame"
+],
+"Lua.diagnostics.disable": [
+    "undefined-field"
+]
 }
